# SequencePairs

./: CMakeLists.txt
instances/: chain_x.spi  chain_y.spi  i02.spi  i03.spi  i04.spi  i05.spi  i06.spi  i07.spi  large_circuit.spi
src/: Digraph.cpp  Digraph.h  FixedMaxVector.h  Instance.cpp  Instance.h  Permutation.cpp  Permutation.h  main.cpp
